--- a/ruoyi-admin/src/main/resources/templates/system/product/product.html
+++ b/ruoyi-admin/src/main/resources/templates/system/product/product.html
@@ -10,7 +10,7 @@
 		<div class="box box-main">
 			<div class="box-header">
 				<div class="box-title">
-					<i class="fa fa-sitemap"></i> 组织机构
+					<i class="fa fa-sitemap"></i> 品牌类目
 				</div>
 				<div class="box-tools pull-right">
 				    <a type="button" class="btn btn-box-tool" href="javascript:void(0)" onclick="dept()" title="管理部门"><i class="fa fa-edit"></i></a>
@@ -180,7 +180,7 @@
 		
 		function queryDeptTree()
 		{
-			var url = ctx + "system/product/deptTreeData";
+			var url = ctx + "system/product/productTreeData";
 			var options = {
 		        url: url,
 		        expandLevel: 2,
