--- a/ruoyi-admin/src/main/resources/templates/system/product/brandTree.html
+++ b/ruoyi-admin/src/main/resources/templates/system/product/brandTree.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
-	<th:block th:include="include :: header('部门树选择')" />
+	<th:block th:include="include :: header('品牌树选择')" />
 	<th:block th:include="include :: ztree-css" />
 </head>
 <style>
@@ -9,8 +9,8 @@
 	button{font-family: "SimSun","Helvetica Neue",Helvetica,Arial;}
 </style>
 <body class="hold-transition box box-main">
-	<input id="treeId"   name="treeId"    type="hidden" th:value="${dept.deptId}"/>
-	<input id="treeName" name="treeName"  type="hidden" th:value="${dept.deptName}"/>
+	<input id="treeId"   name="treeId"    type="hidden"/>
+	<input id="treeName" name="treeName"  type="hidden"/>
 	<div class="wrapper"><div class="treeShowHideButton" onclick="$.tree.toggleSearch();">
 		<label id="btnShow" title="显示搜索" style="display:none;">︾</label>
 		<label id="btnHide" title="隐藏搜索">︽</label>
@@ -28,10 +28,10 @@
 	<th:block th:include="include :: footer" />
 	<th:block th:include="include :: ztree-js" />
 	<script th:inline="javascript">
-	    var prefix = ctx + "system/user"
-	    var deptId = [[${deptId}]];
+	    var prefix = ctx + "system/product"
+	    var brandId = [[${brandId}]];
 		$(function() {
-			var url = prefix + "/deptTreeData";
+			var url = prefix + "/brandTreeData";
 			var options = {
 		        url: url,
 		        expandLevel: 2,
