--- a/ruoyi-admin/src/main/resources/templates/system/brand/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/brand/edit.html
@@ -7,7 +7,7 @@
 <body class="white-bg">
     <div class="wrapper wrapper-content animated fadeInRight ibox-content">
         <form class="form-horizontal m" id="form-brand-edit" th:object="${brand}">
-            <input id="brandId" name="brandId" th:field="*{brandId}"  type="hidden">
+            <input id="id" name="id" th:field="*{id}"  type="hidden">
             <div class="form-group">	
                 <label class="col-sm-2 control-label is-required">品牌名称：</label>
                 <div class="col-sm-10">
