品牌管理、产品管理-定时抓取

--- a/ruoyi-admin/src/main/resources/templates/system/brand/brand.html
+++ b/ruoyi-admin/src/main/resources/templates/system/brand/brand.html
@@ -58,6 +58,10 @@
                 columns: [{
 		            checkbox: true
 		        },
+                {
+                    field: 'id',
+                    visible: false
+                },
 				{
 		            field: 'brandName',
 		            title: '品牌名称',
