--- a/ruoyi-admin/src/main/resources/templates/index-topnav.html
+++ b/ruoyi-admin/src/main/resources/templates/index-topnav.html
@@ -27,7 +27,7 @@
         </div>
         <a th:href="@{/index}">
             <li class="logo hidden-xs">
-                <span class="logo-lg">RuoYi</span>
+                <span class="logo-lg">竞品品牌监控工具</span>
             </li>
          </a>
         <div class="sidebar-collapse tab-content" id="side-menu">
@@ -234,17 +234,17 @@
                     </li>
 	                </th:block>
 	                
-	                <li role="presentation" id="tab_index">
-                      <a data-toggle="tab" href="#index">
-                        <i class="fa fa-area-chart"></i> <span>统计报表</span>
-                      </a>
-                    </li>
-                    
-                    <li role="presentation" id="tab_demo" th:if="${demoEnabled}">
-                      <a data-toggle="tab" href="#demo">
-                        <i class="fa fa-desktop"></i> <span>实例演示</span>
-                      </a>
-                    </li>
+<!--	                <li role="presentation" id="tab_index">-->
+<!--                      <a data-toggle="tab" href="#index">-->
+<!--                        <i class="fa fa-area-chart"></i> <span>统计报表</span>-->
+<!--                      </a>-->
+<!--                    </li>-->
+<!--                    -->
+<!--                    <li role="presentation" id="tab_demo" th:if="${demoEnabled}">-->
+<!--                      <a data-toggle="tab" href="#demo">-->
+<!--                        <i class="fa fa-desktop"></i> <span>实例演示</span>-->
+<!--                      </a>-->
+<!--                    </li>-->
 				  </ul>
 				</div>
                 <!-- 右侧栏 -->
