--- a/ruoyi-admin/src/main/resources/templates/system/product/add.html
+++ b/ruoyi-admin/src/main/resources/templates/system/product/add.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
 	<th:block th:include="include :: header('新增产品')" />
+    <th:block th:include="include :: layout-latest-css" />
 	<th:block th:include="include :: select2-css" />
 </head>
 <body>
@@ -14,7 +15,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">产品名称：</label>
                         <div class="col-sm-8">
-                            <input name="productName" placeholder="请输入产品名称" class="form-control" type="text" maxlength="30" required>
+                            <input name="prodName" placeholder="请输入产品名称" class="form-control" type="text" maxlength="30" required>
                         </div>
                     </div>
                 </div>
@@ -23,7 +24,7 @@
                         <label class="col-sm-4 control-label">归属品牌：</label>
                         <div class="col-sm-8">
                             <div class="input-group">
-                            	<input name="deptName" onclick="selectBrandTree()" id="treeName" type="text" placeholder="请选择归属品牌" class="form-control">
+                            	<input name="brandName" onclick="selectBrandTree()" id="treeName" type="text" placeholder="请选择归属品牌" class="form-control">
                                 <span class="input-group-addon"><i class="fa fa-search"></i></span>
                             </div>
                         </div>
@@ -37,7 +38,17 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <input id="prodUrl" name="prodUrl" class="form-control prodUrl" type="text" maxlength="50" placeholder="请输入产品Url">
-                                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                <span class="input-group-addon"><i class="fa fa-paper-plane-o"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">产品日期：</label>
+                        <div class="col-sm-8">
+                            <div class="select-time">
+                                <input type="text" class="time-input" id="prodDate" placeholder="产品日期" name="prodDate"/>
                             </div>
                         </div>
                     </div>
@@ -48,7 +59,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">产品价格：</label>
                         <div class="col-sm-8">
-                            <input id="prodPrice" name="prodPrice" placeholder="请输入产品价格" class="form-control" type="text" maxlength="30" required>
+                            <input id="prodPrice" name="prodPrice" placeholder="请输入产品价格" class="form-control" type="number" min="0" step="0.01" required>
                         </div>
                     </div>
                 </div>
@@ -56,7 +67,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">热销指标：</label>
                         <div class="col-sm-8">
-                            <input id="prodSalesScore" name="prodSalesScore" placeholder="请输入热销指标" class="form-control" type="text" maxlength="30" required>
+                            <input id="prodSalesScore" name="prodSalesScore" placeholder="请输入热销指标" class="form-control" type="number" min="0" step="0.01" required>
                         </div>
                     </div>
                 </div>
@@ -82,6 +93,7 @@
         </div>
     </div>
 	<th:block th:include="include :: footer" />
+    <th:block th:include="include :: layout-latest-js" />
 	<th:block th:include="include :: select2-js" />
 	<script>
 	    var prefix = ctx + "system/product";
