--- a/ruoyi-admin/src/main/resources/templates/system/product/edit.html
+++ b/ruoyi-admin/src/main/resources/templates/system/product/edit.html
@@ -2,6 +2,7 @@
 <html lang="zh" xmlns:th="http://www.thymeleaf.org" >
 <head>
 	<th:block th:include="include :: header('修改产品')" />
+    <th:block th:include="include :: layout-latest-css" />
 	<th:block th:include="include :: select2-css" />
 </head>
 <body>
@@ -38,7 +39,30 @@
                         <div class="col-sm-8">
                             <div class="input-group">
                                 <input name="prodUrl" class="form-control prodUrl" type="text" maxlength="50" placeholder="请输入产品Url" th:field="*{prodUrl}">
-                                <span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+                                <span class="input-group-addon"><i class="fa fa-paper-plane-o"></i></span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label class="col-sm-4 control-label">产品日期：</label>
+                        <div class="col-sm-8">
+                            <div class="select-time">
+                                <input type="text" class="time-input" id="prodDate" placeholder="产品日期" name="prodDate" th:field="*{prodDate}"/>
+                                <script th:inline="javascript">
+                                    /*<![CDATA[*/
+                                    document.addEventListener('DOMContentLoaded', function() {
+                                        const dateInput = document.getElementById('prodDate');
+                                        if (dateInput && dateInput.value) {
+                                            // 将Date对象转换为yyyy-MM-dd格式
+                                            const date = new Date(dateInput.value);
+                                            const formattedDate = date.toISOString().split('T')[0];
+                                            dateInput.value = formattedDate;
+                                        }
+                                    });
+                                    /*]]>*/
+                                </script>
                             </div>
                         </div>
                     </div>
@@ -49,7 +73,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">产品价格：</label>
                         <div class="col-sm-8">
-                            <input class="form-control" type="text" readonly="true" th:field="*{prodPrice}"/>
+                            <input class="form-control" type="number" min="0" step="0.01" th:field="*{prodPrice}"/>
                         </div>
                     </div>
                 </div>
@@ -57,7 +81,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label is-required">热销指标：</label>
                         <div class="col-sm-8">
-                            <input class="form-control" type="text" readonly="true" th:field="*{prodSalesScore}"/>
+                            <input class="form-control" type="number" min="0" step="0.01" th:field="*{prodSalesScore}"/>
                         </div>
                     </div>
                 </div>
@@ -82,6 +106,7 @@
         </div>
     </div>
 	<th:block th:include="include :: footer" />
+    <th:block th:include="include :: layout-latest-js" />
 	<th:block th:include="include :: select2-js" />
 	<script type="text/javascript">
         var prefix = ctx + "system/product";
