--- a/ruoyi-admin/src/main/resources/templates/system/product/product.html
+++ b/ruoyi-admin/src/main/resources/templates/system/product/product.html
@@ -119,6 +119,10 @@
 		        columns: [{
 		            checkbox: true
 		        },
+                {
+                    field: 'id',
+                    visible: false
+                },
 		        {
 		            field: 'prodName',
 		            title: '产品名称',
@@ -132,7 +136,7 @@
                     title: '产品Url'
                 },
 		        {
-		            field: 'brandName',
+		            field: 'brand.brandName',
 		            title: '品牌名称'
 		        },
                 {
@@ -150,7 +154,19 @@
 		        {
 		            field: 'prodDate',
 		            title: '产品时间',
-		            sortable: true
+		            sortable: true,
+                    formatter: function (value, row, index) {
+                        if (!value) return '-'; // 处理空值
+
+                        const date = new Date(Number(value));
+                        // 检查日期是否有效
+                        if (isNaN(date.getTime())) return '-';
+
+                        const year = date.getFullYear();
+                        const month = String(date.getMonth() + 1).padStart(2, '0');
+                        const day = String(date.getDate()).padStart(2, '0');
+                        return `${year}-${month}-${day}`;
+                    }
 		        },
 		        {
 		            title: '操作',
@@ -160,10 +176,6 @@
 		                	var actions = [];
 			                actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.editTab(\'' + row.id + '\')"><i class="fa fa-edit"></i>编辑</a> ');
 			                actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.id + '\')"><i class="fa fa-remove"></i>删除</a> ');
-			                var more = [];
-			                more.push("<a class='btn btn-default btn-xs " + resetPwdFlag + "' href='javascript:void(0)' onclick='resetPwd(" + row.id + ")'><i class='fa fa-key'></i>重置密码</a> ");
-			                more.push("<a class='btn btn-default btn-xs " + editFlag + "' href='javascript:void(0)' onclick='authRole(" + row.id + ")'><i class='fa fa-check-square-o'></i>分配角色</a>");
-			                actions.push('<a tabindex="0" class="btn btn-info btn-xs" role="button" data-container="body" data-placement="left" data-toggle="popover" data-html="true" data-trigger="hover" data-content="' + more.join('') + '"><i class="fa fa-chevron-circle-right"></i>更多操作</a>');
 			                return actions.join('');
 		            	} else {
 		                    return "";
